--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -882,6 +882,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "source": [
+    "browser.quit()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
